--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.3.9",
     "react": "16.2.0",
     "react-native": "0.53.3",
+    "react-native-carousel": "^0.11.0",
     "react-native-snap-carousel": "^3.6.0",
+    "react-native-swipeable-parallax-carousel": "^1.1.0",
     "react-native-ui-kitten": "^3.0.0",
-    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.2.1"
   },
   "devDependencies": {
