--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,4 @@
 rootProject.name = 'SelfieStop'
-include ':react-native-camera'
-project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
-
+include ':rncamerakit'
+project(':rncamerakit').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera-kit/android/')
 include ':app'
