--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-native": "0.53.3",
     "react-native-camera-kit": "^5.3.24",
     "react-native-carousel": "^0.11.0",
+    "react-native-grid-list": "^1.0.6",
+    "react-native-photo-grid": "0.0.2",
     "react-native-snap-carousel": "^3.6.0",
     "react-native-swipeable-parallax-carousel": "^1.1.0",
     "react-native-ui-kitten": "^3.0.0",
