--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "form-data": "^2.3.2",
     "native-base": "^2.3.9",
     "react": "16.2.0",
     "react-native": "0.53.3",
     "react-native-camera-kit": "^5.3.24",
+    "react-native-camera-roll-picker": "^1.2.3",
     "react-native-carousel": "^0.11.0",
     "react-native-grid-list": "^1.0.6",
     "react-native-photo-grid": "0.0.2",
