--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-camera-kit": "^5.3.24",
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-carousel": "^0.11.0",
+    "react-native-fontawesome": "^5.7.0",
     "react-native-grid-list": "^1.0.6",
     "react-native-photo-grid": "0.0.2",
     "react-native-snap-carousel": "^3.6.0",
